# Software-Engineering-HSC-Textbook

./: .gitignore  .markdownlint.json  .nav.yml  404.html  AI_README.md  CONTRIBUTING.md  LICENSE  README.md  beta_alert_hook.py  code_fence_formatter.py  convert_simple.py  dev-requirements.txt  glossary.toml  glossary_extension.py  index.html  indexnow_hook.py  kroki_wrapper.py  main.py  mermaid_wrapper.py  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  test_structure_chart.py
.github/: INDEXNOW_MIGRATION.md  advanced-issue-labeler.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  content-issue.md  content-issue.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-label-issues.yml  deploy.yml  manual-release.yml
Year11/ObjectOrientedParadigm/: index.html
Year11/ProgrammingFundamentals/: index.html
Year11/ProgrammingMechatronics/: index.html
Year12/ProgrammingForTheWeb/: index.html
Year12/SecureSoftwareArchitecture/: index.html
Year12/SoftwareAutomation/: index.html
Year12/SoftwareEngineeringProject/: index.html
assets/: code-editor.css  code-runner.css  cross-reference.css  diagram-modal.css  diagram-modal.js  glossary.js  ide-utils.js  pyodide-worker.js
code-editor/: index.html
docs/: .nav.yml  glossary.toml  index.md  structure-chart-examples.md
docs/assets/: code-blocks.js  (+17 more)
extensions/: __init__.py  glossary_extension.py  structure_chart.py
glossary/: index.html
macros/: __init__.py  glossary_macros.py
overrides/: main.html
scripts/: add_quiz_headings.py  analyze_code_blocks.py  bump_version.py  check_kroki.py  clean_quizzes_simple.py  cleanup_section_folders.py  debug_kroki.py  debug_markdown_extensions.py  debug_mkdocs_config.py  fix_code_blocks.py  fix_duplicate_headings.py  fix_duplicate_headings_final.py  fix_quiz_format.py  fix_quiz_structure.py  fix_single_file.py  indexnow_notify.py  md_quality_check.py  move_index_files.py  print_md_extensions.py  rename_sections.py  serve.ps1  set_requests_ca_bundle.ps1  set_titles.py  simple_md_fix.py  simple_md_lint.py  smoke_test.py  sort_glossary.ps1  sort_glossary.py
search/: search_index.json
(+718 files in other folders)
