[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-textbook"
version = "0.2.8"
description = "Software Engineering HSC Textbook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"mkdocs",
	"mkdocs-material",
	"pymdown-extensions",
	"mkdocs-kroki-plugin",
	"mkdocs-include-markdown-plugin",
	"mkdocs-macros-plugin",
	"mkdocs-git-revision-date-localized-plugin",
	"mkdocs-awesome-nav",
	"requests>=2.32.4",
]

[tool.setuptools]
# Declare the Python modules in the root directory
# Note: indexnow_hook.py is deprecated, IndexNow now runs via GitHub Actions
py-modules = ["kroki_wrapper", "code_fence_formatter", "glossary_extension", "glossary_macros"]

[project.optional-dependencies]
