[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-textbook"
version = "0.3.2"
description = "Software Engineering HSC Textbook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"mkdocs",
	"mkdocs-material",
	"pymdown-extensions",
	"mkdocs-kroki-plugin",
	"mkdocs-include-markdown-plugin",
	"mkdocs-macros-plugin",
	"mkdocs-git-revision-date-localized-plugin",
	"mkdocs-awesome-nav",
	"requests>=2.32.4",
	"mkdocs-meta-descriptions-plugin>=4.1.0",
]

[tool.setuptools]
packages = ["extensions", "macros"]


[project.optional-dependencies]
